# scrotwm

./: .gitignore  Makefile.am  Makefile.in  README  config.status  configure  configure.ac  scrotwm.1
CVS/: Entries
archive/CVS/: Repository  Root
archive/scrotwm/: Makefile  scrotwm.c
archive/scrotwm/CVS/: Entries
archive/scrotwm/html/CVS/: Entries
archive/scrotwm/lib/: Makefile
archive/scrotwm/lib/CVS/: Entries  Repository
archive/scrotwm/linux/: Makefile
archive/scrotwm/linux/CVS/: Entries  Repository
autom4te.cache/: output.0  requests  traces.0  traces.1
doc/: Makefile  Makefile.am  Makefile.in  scrotwm.conf
doc/html/: license.html  scrotwm.html
examples/: Makefile  Makefile.am  Makefile.in
html/CVS/: Entries  Repository
lib/CVS/: Entries
linux/: util.h
linux/CVS/: Entries
man/: Makefile  Makefile.am  Makefile.in
scripts/: Makefile  Makefile.am  Makefile.in  initscreen.sh  screenshot.sh
src/: Makefile  Makefile.am  Makefile.in  linux.c  scrotwm  scrotwm.c
src/.deps/: linux.Po  scrotwm.Po  swm_hack.Po
src/lib/: swm_hack.c
